@@ -17,17 +17,19 @@
  */
 package art.connectionpool;
 
-import java.io.IOException;
-import java.util.Map;
-import java.util.Properties;
-import java.util.concurrent.TimeUnit;
-import javax.sql.DataSource;
-
 import art.datasource.Datasource;
 import art.datasource.DatasourceOptions;
+import art.servlets.Config;
 import art.utils.ArtUtils;
 import com.zaxxer.hikari.HikariConfig;
 import com.zaxxer.hikari.HikariDataSource;
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Properties;
+import java.util.concurrent.TimeUnit;
+import javax.sql.DataSource;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -39,85 +41,94 @@ import org.slf4j.LoggerFactory;
  */
 public class HikariCPConnectionPool extends ConnectionPool {
 
-    private static final Logger logger = LoggerFactory.getLogger(HikariCPConnectionPool.class);
+	private static final Logger logger = LoggerFactory.getLogger(HikariCPConnectionPool.class);
 
-    private HikariDataSource hikariDataSource;
+	private HikariDataSource hikariDataSource;
 
-    private Map<String, Object> toHikariProperties(String options) {
-        Map<String, Object> result;
-        if (StringUtils.isNotBlank(options)) {
+	@Override
+	protected DataSource createPool(Datasource datasource, int maxPoolSize) {
+		logger.debug("Entering createPool: maxPoolSize={}", maxPoolSize);
 
-        }
-        return null;
-    }
+		HikariConfig config = createHikariConfig(datasource);
 
-    @Override
-    protected DataSource createPool(Datasource datasource, int maxPoolSize) {
-        logger.debug("Entering createPool: maxPoolSize={}", maxPoolSize);
+		config.setPoolName(datasource.getName());
+		config.setUsername(datasource.getUsername());
+		config.setPassword(datasource.getPassword());
+		//explicitly set minimum idle connection count to a low value to avoid
+		//"too many connection" errors where you have multiple report datasources using the same server
+		config.setMinimumIdle(1);
+		config.setMaximumPoolSize(maxPoolSize);
+		config.setJdbcUrl(datasource.getUrl());
 
-        HikariConfig config = initHikariConfig(datasource.getOptions());
+		String driver = datasource.getDriver();
+		if (StringUtils.isNotBlank(driver)) {
+			config.setDriverClassName(driver); //registers/loads the driver
+		}
 
-        config.setPoolName(datasource.getName());
-        config.setUsername(datasource.getUsername());
-        config.setPassword(datasource.getPassword());
-        //explicitly set minimum idle connection count to a low value to avoid
-        //"too many connection" errors where you have multiple report datasources using the same server
-        config.setMinimumIdle(1);
-        config.setMaximumPoolSize(maxPoolSize);
-        config.setJdbcUrl(datasource.getUrl());
+		if (StringUtils.isBlank(datasource.getTestSql())
+				|| StringUtils.equals(datasource.getTestSql(), "isValid")) {
+			//do nothing
+		} else {
+			config.setConnectionTestQuery(datasource.getTestSql());
+		}
 
-        String driver = datasource.getDriver();
-        if (StringUtils.isNotBlank(driver)) {
-            config.setDriverClassName(driver); //registers/loads the driver
-        }
+		long timeoutMillis = TimeUnit.MINUTES.toMillis(datasource.getConnectionPoolTimeoutMins());
+		config.setIdleTimeout(timeoutMillis);
 
-        if (StringUtils.isBlank(datasource.getTestSql())
-            || StringUtils.equals(datasource.getTestSql(), "isValid")) {
-            //do nothing
-        } else {
-            config.setConnectionTestQuery(datasource.getTestSql());
-        }
+		//set application name connection property
+		config.setDataSourceProperties(getAppNameProperty(datasource.getUrl(), datasource.getName()));
 
-        long timeoutMillis = TimeUnit.MINUTES.toMillis(datasource.getConnectionPoolTimeoutMins());
-        config.setIdleTimeout(timeoutMillis);
+		hikariDataSource = new HikariDataSource(config);
 
-        //set application name connection property
-        config.setDataSourceProperties(getAppNameProperty(datasource.getUrl(), datasource.getName()));
+		return hikariDataSource;
+	}
 
-        hikariDataSource = new HikariDataSource(config);
+	/**
+	 * Creates a HikariConfig object for a datasource, considering properties
+	 * configured in the hikaricp.properties file and/or on the datasource
+	 *
+	 * @param datasource the datasource for which to create a config object
+	 * @return new HikariConfig instance
+	 */
+	private HikariConfig createHikariConfig(Datasource datasource) {
+		logger.debug("Entering createHikariConfig");
 
-        return hikariDataSource;
-    }
+		try {
+			//https://www.baeldung.com/java-merging-properties
+			//https://stackoverflow.com/questions/2004833/how-to-merge-two-java-util-properties-objects
+			Properties mergedProperties = new Properties();
 
-    /**
-     * Initializes data source properties.
-     * If properties are specified in the configuration
-     * then these properties will be transferred to the configuration
-     *
-     * @param options - data source settings in json format
-     * @return new HikariConfig instance
-     * @see DatasourceOptions
-     */
-    private HikariConfig initHikariConfig(String options) {
-        try {
-            DatasourceOptions datasourceOptions = ArtUtils.jsonToObject(options, DatasourceOptions.class);
-            Map<String, Object> props;
-            HikariConfig result;
-            if (datasourceOptions != null && (props = datasourceOptions.getProperties()) != null) {
-                Properties properties = new Properties();
-                properties.putAll(props);
-                result = new HikariConfig(properties);
-            } else {
-                result = new HikariConfig();
-            }
-            return result;
-        } catch (IOException e) {
-            throw new IllegalArgumentException("Illegal Datasource options value: " + options, e);
-        }
-    }
+			String propertiesFilePath = Config.getClassesPath() + "hikaricp.properties";
+			Properties fileProperties = ArtUtils.loadPropertiesFromFile(propertiesFilePath);
+			mergedProperties.putAll(fileProperties);
 
-    @Override
-    protected void closePool() {
-        hikariDataSource.close();
-    }
+			String options = datasource.getOptions();
+			if (StringUtils.isNotBlank(options)) {
+				DatasourceOptions datasourceOptions = ArtUtils.jsonToObject(options, DatasourceOptions.class);
+				Map<String, Object> datasourcePropertiesMap = datasourceOptions.getHikariCp();
+				if (datasourcePropertiesMap != null) {
+					Map<String, String> stringMap = new HashMap<>();
+					for (Entry<String, Object> entry : datasourcePropertiesMap.entrySet()) {
+						//https://stackoverflow.com/questions/2004833/how-to-merge-two-java-util-properties-objects
+						String key = entry.getKey();
+						Object value = entry.getValue();
+						if (key != null && value != null) {
+							stringMap.put(key, String.valueOf(value));
+						}
+					}
+					mergedProperties.putAll(stringMap);
+				}
+			}
+
+			HikariConfig config = new HikariConfig(mergedProperties);
+			return config;
+		} catch (IOException ex) {
+			throw new RuntimeException(ex);
+		}
+	}
+
+	@Override
+	protected void closePool() {
+		hikariDataSource.close();
+	}
 }
